# TurfTrack

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  ISSUES.md  README.md  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.test.yml  docker-compose.yml  remotes.md
backend/: .coverage  .dockerignore  .env  Dockerfile  Dockerfile.celery  Dockerfile.prod  alembic.ini  entrypoint.sh  main.py  pyproject.toml  pytest.ini  run_tests.sh
backend/alembic/: env.py
backend/alembic/data/: products.csv
backend/alembic/versions/: 07f589e74a97_remove_unsupported_weather_columns.py  0d3880b8471c_add_gdd_models_and_values_tables.py  138dec82e6a6_add_is_forecast_to_weed_pressure.py  1a13593c9996_add_location_name.py  1cd95e5b04c5_create_products_table.py  28fafe01aac4_add_nutrient_and_cost_applied_columns_.py  2a1b2c3d4e5f_populate_products_table.py  2a9ef610d9e8_add_indexes_to_gdd_tables.py  33f191fec956_create_lawns_table.py  3d23cab330cc_add_latitude_and_longitude_to_lawns.py  4f48560bc4f9_add_gdd_model_parameters_table.py  54ecede97689_update_reset_type_enum.py  65e4c4a7246b_create_applications_table.py  66e2fcb24857_add_weed_pressure_tables.py  690dabfeedbd_add_irrigation_entries_table.py  94794423d860_update_gdd_models_to_use_location_id.py  (+22 more)
backend/app/: main.py
backend/notebooks/: test_daily_weather.ipynb
backend/scripts/: populate_weed_species.py
backend/tests/: __init__.py  conftest.py  test.env  test.env.example  test_infrastructure.py  test_infrastructure_simple.py  utils.py
(+335 files in other folders)
