[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.2",
    "celery-redbeat>=2.3.2",
    "fastapi>=0.115.12",
    "flower>=2.0.1",
    "greenlet>=3.2.1",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "openmeteo-requests>=1.5.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-json-logger>=3.3.0",
    "redis>=5.2.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
